Add Download Manager view to snapshotting overlays.

Overlays are used to make snapshots to Tab Switcher and for Side Swipe
Tab switching.

Bug: 817158
Cq-Include-Trybots: master.tryserver.chromium.mac:ios-simulator-cronet;master.tryserver.chromium.mac:ios-simulator-full-configs
Change-Id: I66c29e45b5693af77dff70aafa6476a5181c9642
Reviewed-on: https://chromium-review.googlesource.com/940627
Commit-Queue: Eugene But <eugenebut@chromium.org>
Reviewed-by: Sylvain Defresne <sdefresne@chromium.org>
Reviewed-by: edchin <edchin@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540411}
Former-commit-id: 0205d8ed30d0588edd6d22f9819797cc1d0839f2