ios/chrome/browser/ui/download/download_manager_coordinator.mm
@@ -77,6 +77,10 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   _storeKitCoordinator = nil;
 }
 
+- (UIViewController*)viewController {
+  return _viewController;
+}
+
 #pragma mark - DownloadManagerTabHelperDelegate
 
 - (void)downloadManagerTabHelper:(nonnull DownloadManagerTabHelper*)tabHelper
